<resources>

    <string name="app_name">tappxi</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Tappxi</string>
    <string name="call_taxi">Call a Taxi</string>
    <string name="title_activity_search_destinations">Search Destinations</string>
    <string name="search_hint">Search Destination</string>
    <string name="menu_search">Search</string>
    <string name="next_button">Next</string>
    <string name="title_activity_taxi_offers">Taxi Offers</string>
    <string name="eta">ETA</string>
    <string name="fare">Fare</string>
    <string name="stand">Stand</string>
    <string name="select">Select</string>
    <string name="title_activity_countdown_timer">Countdown Timer</string>
    <string name="balance">Balance</string>
    <string name="taxi_is_here">Taxi is here</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_pay">Pay</string>
    <string name="pay">Pay</string>
    <string name="wrong">Wrong</string>
    <string name="noaddresses">No addresses</string>
    <string name="getting">Getting nearby taxis</string>
    <string name="getting_wait">Getting nearby taxis, please wait</string>
    <string name="notaxis">There aren\'t nearby taxis</string>
    <string name="error_selecting_trip">Error selecting trip</string>
    <string name="taxi_should_be_here">Taxi should be here</string>
    <string name="error_connecting_to_server">Error connecting to the server</string>
    <string name="title_activity_stand">Taxi Stand</string>
    <string name="taxi_stand">Taxi Stand</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="call">Call</string>

</resources>